Update and rename README.md to README

--- a/README
+++ b/README
@@ -2,5 +2,8 @@
 
 doorberekening maandelijkse abonnement bij afgesloten abonnementen
 
+# hollandsnieuwe
+http://nl.wikisage.org/wiki/Hollandsnieuwe
+
 # oplichting
 https://nl.wikipedia.org/wiki/Oplichting
