--- a/README
+++ b/README
@@ -1,6 +1,6 @@
 # hollands-nieuwe-fake-facturen
 
-doorberekening maandelijkse abonnement bij afgesloten abonnementen
+doorberekening maandelijkse abonnement kosten bij afgesloten abonnementen
 
 # hollandsnieuwe
 http://nl.wikisage.org/wiki/Hollandsnieuwe
