--- a/README
+++ b/README
@@ -1,4 +1,6 @@
-# hollands-nieuwe-fake-facturen
+---------------------------------
+| hollands-nieuwe-fake-facturen |
+---------------------------------
 
 doorberekening maandelijkse abonnement kosten bij afgesloten abonnementen
 
