--- a/README
+++ b/README
@@ -2,7 +2,7 @@
 | hollands-nieuwe-fake-facturen |
 ---------------------------------
 
-doorberekening maandelijkse abonnement kosten bij afgesloten abonnementen
+'doorberekening maandelijkse abonnement kosten bij afgesloten abonnementen'
 
 # hollandsnieuwe
 http://nl.wikisage.org/wiki/Hollandsnieuwe
